Integrate and configure Elasticsearch